--- a/IntPerInt/IntPerInt.entitlements
+++ b/IntPerInt/IntPerInt.entitlements
@@ -16,5 +16,9 @@
 	<true/>
 	<key>com.apple.security.cs.disable-library-validation</key>
 	<true/>
+	<key>com.apple.security.temporary-exception.files.absolute-path.read-write</key>
+	<array>
+		<string>/tmp/intperint.sock</string>
+	</array>
 </dict>
 </plist>
